# Vokabeltrainer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  database.cpp  database.hpp  database_test.cpp  dynamic_events.cpp  dynamic_events.hpp  input.cpp  input.hpp  vokabeltrainer.cpp  vokabeltrainer.hpp
